--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
           <h4>AROUND THE WEB</h4>
           <p></p>
           <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-twitter"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-globe2"></i></a>
+          <a href="#"><i class="bi bi-twitter"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-globe2"></i></a>
         </div>
         <div class="content-foot">
           <h4>ABOUT FREELANCER</h4>
